--- a/ligapro_manager/templates/share_report.html
+++ b/ligapro_manager/templates/share_report.html
@@ -128,11 +128,21 @@
                 <div class="grid grid-cols-2 gap-4">
                     {% for match in recent_matches %}
                     <div class="bg-white/5 p-3 rounded flex justify-between items-center text-sm border border-white/5">
-                        <span class="font-medium text-right flex-1">{{ teams_dict[match.home_team_id].name }}</span>
+                        <div class="flex items-center justify-end gap-2 flex-1 text-right">
+                            {% if league.show_team_logos and teams_dict[match.home_team_id].shield_url %}
+                            <img src="{{ teams_dict[match.home_team_id].shield_url }}" class="w-4 h-4 object-contain">
+                            {% endif %}
+                            <span class="font-medium truncate">{{ teams_dict[match.home_team_id].name }}</span>
+                        </div>
                         <span class="bg-black/40 px-3 py-1 rounded font-bold mx-2 text-white whitespace-nowrap">
                             {{ match.home_score }} - {{ match.away_score }}
                         </span>
-                        <span class="font-medium text-left flex-1">{{ teams_dict[match.away_team_id].name }}</span>
+                        <div class="flex items-center justify-start gap-2 flex-1 text-left">
+                            <span class="font-medium truncate">{{ teams_dict[match.away_team_id].name }}</span>
+                            {% if league.show_team_logos and teams_dict[match.away_team_id].shield_url %}
+                            <img src="{{ teams_dict[match.away_team_id].shield_url }}" class="w-4 h-4 object-contain">
+                            {% endif %}
+                        </div>
                     </div>
                     {% endfor %}
                 </div>
@@ -168,9 +178,21 @@
                                 <p class="text-white/40 text-xs mb-2 text-center">{{ match.match_date.strftime('%d/%m
                                     %I:%M %p') }}</p>
                                 <div class="flex justify-between items-center font-medium">
-                                    <span class="flex-1 text-right">{{ teams_dict[match.home_team_id].name }}</span>
+                                    <div class="flex items-center justify-end gap-2 flex-1 text-right">
+                                        {% if league.show_team_logos and teams_dict[match.home_team_id].shield_url %}
+                                        <img src="{{ teams_dict[match.home_team_id].shield_url }}"
+                                            class="w-4 h-4 object-contain">
+                                        {% endif %}
+                                        <span class="truncate">{{ teams_dict[match.home_team_id].name }}</span>
+                                    </div>
                                     <span class="text-white/40 text-xs mx-2">vs</span>
-                                    <span class="flex-1 text-left">{{ teams_dict[match.away_team_id].name }}</span>
+                                    <div class="flex items-center justify-start gap-2 flex-1 text-left">
+                                        <span class="truncate">{{ teams_dict[match.away_team_id].name }}</span>
+                                        {% if league.show_team_logos and teams_dict[match.away_team_id].shield_url %}
+                                        <img src="{{ teams_dict[match.away_team_id].shield_url }}"
+                                            class="w-4 h-4 object-contain">
+                                        {% endif %}
+                                    </div>
                                 </div>
                             </div>
                             {% endfor %}
