--- a/ligapro_manager/templates/league_detail.html
+++ b/ligapro_manager/templates/league_detail.html
@@ -1405,6 +1405,7 @@
             <input type="hidden" name="league_id" value="{{ league.id }}">
             <input type="hidden" name="home_team_id" id="matrix_home_team_id">
             <input type="hidden" name="away_team_id" id="matrix_away_team_id">
+            <input type="hidden" name="match_round" id="matrix_match_round">
 
             <h3 class="text-xl font-bold mb-6 flex items-center justify-center gap-4">
                 <div class="flex flex-col items-center gap-2 w-1/3">
@@ -1563,6 +1564,7 @@
 
         document.getElementById('matrix_home_team_id').value = cellData.home_id;
         document.getElementById('matrix_away_team_id').value = cellData.away_id;
+        document.getElementById('matrix_match_round').value = cellData.round || 1;
 
         const deleteBtn = document.getElementById('btn-delete-matrix-match');
 
