Modificando el diseño responsivo para dispositivos móviles de la plataforma

--- a/ligapro_manager/templates/league_detail.html
+++ b/ligapro_manager/templates/league_detail.html
@@ -666,8 +666,8 @@
                     {% endif %}
 
                     {% if top_scorers %}
-                    <div class="card overflow-hidden p-0">
-                        <table class="w-full">
+                    <div class="card overflow-x-auto p-0">
+                        <table class="w-full min-w-[500px]">
                             <thead class="bg-white/5">
                                 <tr class="text-left text-xs uppercase text-white/60">
                                     <th class="p-3">#</th>
@@ -749,8 +749,8 @@
                     {% endif %}
 
                     {% if top_goalkeepers %}
-                    <div class="card overflow-hidden p-0">
-                        <table class="w-full">
+                    <div class="card overflow-x-auto p-0">
+                        <table class="w-full min-w-[500px]">
                             <thead class="bg-white/5">
                                 <tr class="text-left text-xs uppercase text-white/60">
                                     <th class="p-3">#</th>
